--- a/app/build.gradle
+++ b/app/build.gradle
@@ -7,12 +7,12 @@ plugins {
 
 android {
     namespace 'com.codinlog.presentation'
-    compileSdk 32
+    compileSdk 33
 
     defaultConfig {
         applicationId "com.codinlog.presentation"
         minSdk 26
-        targetSdk 32
+        targetSdk 33
         versionCode 1
         versionName "1.0"
 
@@ -37,9 +37,10 @@ android {
     }
     buildFeatures {
         compose true
+        dataBinding true
     }
     composeOptions {
-        kotlinCompilerExtensionVersion '1.1.1'
+        kotlinCompilerExtensionVersion '1.3.2'
     }
     packagingOptions {
         resources {
@@ -50,10 +51,11 @@ android {
 
 dependencies {
     implementation "com.google.dagger:hilt-android:2.44"
+    implementation 'androidx.lifecycle:lifecycle-service:2.5.1'
     kapt "com.google.dagger:hilt-compiler:2.44"
     implementation 'androidx.core:core-ktx:1.9.0'
     implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.5.1'
-    implementation 'androidx.activity:activity-compose:1.6.0'
+    implementation 'androidx.activity:activity-compose:1.6.1'
     implementation "androidx.compose.ui:ui:$compose_version"
     implementation "androidx.compose.ui:ui-tooling-preview:$compose_version"
     implementation 'androidx.compose.material3:material3:1.0.0-rc01'
