--- a/app/build.gradle
+++ b/app/build.gradle
@@ -38,6 +38,7 @@ android {
     buildFeatures {
         compose true
         dataBinding true
+        viewBinding true
     }
     composeOptions {
         kotlinCompilerExtensionVersion '1.3.2'
@@ -52,6 +53,11 @@ android {
 dependencies {
     implementation "com.google.dagger:hilt-android:2.44"
     implementation 'androidx.lifecycle:lifecycle-service:2.5.1'
+    implementation 'com.google.android.material:material:1.4.+'
+    implementation 'androidx.appcompat:appcompat:1.4.1'
+    implementation 'androidx.constraintlayout:constraintlayout:2.1.3'
+    implementation 'androidx.navigation:navigation-fragment-ktx:2.4.1'
+    implementation 'androidx.navigation:navigation-ui-ktx:2.4.1'
     kapt "com.google.dagger:hilt-compiler:2.44"
     implementation 'androidx.core:core-ktx:1.9.0'
     implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.5.1'
