--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,10 +13,20 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Presentation"
         tools:targetApi="31">
+        <activity
+            android:name=".KeyboardActivity"
+            android:exported="false"
+            android:label="@string/title_activity_keyboard"
+            android:theme="@style/Theme.Presentation.NoActionBar">
+            <meta-data
+                android:name="android.app.lib_name"
+                android:value="" />
+        </activity>
+
         <service
             android:name=".service.PresentationService"
             android:enabled="true"
-            android:exported="true"/>
+            android:exported="true" />
 
         <activity
             android:name=".MainActivity"
