--- a/app/build.gradle
+++ b/app/build.gradle
@@ -51,6 +51,8 @@ android {
 }
 
 dependencies {
+    implementation(project(":app:presentation"))
+    implementation(project(":app:presentation-kts"))
     implementation "com.google.dagger:hilt-android:2.44"
     implementation 'androidx.lifecycle:lifecycle-service:2.5.1'
     implementation 'com.google.android.material:material:1.4.+'
